[gd_scene load_steps=12 format=3 uid="uid://rt2llskmx7xm"]

[ext_resource type="Texture2D" uid="uid://cggfs567rn1ay" path="res://assets/raptor/light-sprite.png" id="2"]
[ext_resource type="Script" path="res://examples/10-2d-lighting/light_2d_tool.gd" id="2_38awf"]
[ext_resource type="Script" path="res://examples/10-2d-lighting/2d-lighting.gd" id="3"]
[ext_resource type="SpineAtlasResource" uid="uid://mrgjttgrjlve" path="res://examples/10-2d-lighting/spine_resource/normalmap_test.atlas" id="4_pe6gx"]
[ext_resource type="SpineSkeletonFileResource" uid="uid://ct10i6r48aye1" path="res://examples/10-2d-lighting/spine_resource/frida.skel" id="4_tcku4"]
[ext_resource type="Script" path="res://examples/10-2d-lighting/light_manager.gd" id="6_7cdyy"]
[ext_resource type="Script" path="res://examples/10-2d-lighting/light_layers.gd" id="6_k1s0s"]
[ext_resource type="PackedScene" uid="uid://bhvol2oam705y" path="res://ui/ValueSliderV2.tscn" id="6_lpx7j"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://ui/ValueSlider.tscn" id="9_rajaa"]

[sub_resource type="SpineSkeletonDataResource" id="SpineSkeletonDataResource_jcxcg"]
atlas_res = ExtResource("4_pe6gx")
skeleton_file_res = ExtResource("4_tcku4")

[sub_resource type="Environment" id="Environment_kg1un"]
background_energy_multiplier = 0.0
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 2.97

[node name="LightScene" type="Node2D"]
script = ExtResource("3")

[node name="Light2DTool" type="Node" parent="."]
script = ExtResource("2_38awf")

[node name="SpineSprite2" type="SpineSprite" parent="."]
visible = false
position = Vector2(382, 491)
skeleton_data_res = SubResource("SpineSkeletonDataResource_jcxcg")
preview_skin = "Default"
preview_animation = "idle"
preview_frame = true
preview_time = 0.0

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-111, -26, -106, 701, 1365, 695, 1333, -39)

[node name="Lights" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Light2D" type="PointLight2D" parent="Lights"]
position = Vector2(663, 381)
scale = Vector2(1.51563, 1.51563)
color = Color(1, 0.0117647, 0.0117647, 1)
energy = 0.66
texture = ExtResource("2")
texture_scale = 1.6
height = 100.0

[node name="Light2D2" type="PointLight2D" parent="Lights"]
position = Vector2(504, 199)
scale = Vector2(1.51563, 1.51563)
color = Color(4.04298e-06, 0.618256, 0.578913, 1)
energy = 1.88
blend_mode = 2
shadow_color = Color(0, 0, 0, 1)
texture = ExtResource("2")
texture_scale = 1.36
height = 100.0

[node name="Light2D3" type="PointLight2D" parent="Lights"]
position = Vector2(330, 400)
scale = Vector2(1.51563, 1.51563)
color = Color(0, 0.541366, 0.953672, 1)
energy = 0.66
texture = ExtResource("2")
offset = Vector2(-9.89688, -5.27833)
texture_scale = 1.36
height = 100.0

[node name="GlobalLight" type="CanvasModulate" parent="."]
position = Vector2(-1, -2)
color = Color(0.262932, 0.262932, 0.262932, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kg1un")

[node name="LoadObjects" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(265, 308)

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Light" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_7cdyy")

[node name="Tree" type="Tree" parent="UI/Light"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 283.0
offset_bottom = 376.0
script = ExtResource("6_k1s0s")

[node name="LightPosition" parent="UI/Light" instance=ExtResource("6_lpx7j")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 129.0
offset_top = 385.0
offset_right = 279.0
offset_bottom = 437.0
grow_horizontal = 0
min_value = Vector2(-1000, -1000)
max_value = Vector2(1000, 1000)

[node name="LightColorPicker" type="ColorPicker" parent="UI/Light"]
layout_mode = 0
offset_left = 7.0
offset_top = 380.0
offset_right = 311.0
offset_bottom = 894.0
scale = Vector2(0.500746, 0.500746)
edit_alpha = false
color_modes_visible = false

[node name="ScaleSlider" parent="UI/Light" instance=ExtResource("9_rajaa")]
layout_mode = 0
offset_left = 172.0
offset_top = 467.0
offset_right = 323.0
offset_bottom = 491.0
max_value = 20.0
step = 0.01
prefix = "Scale :"
snap_step = 0.01

[node name="EnergySlider" parent="UI/Light" instance=ExtResource("9_rajaa")]
layout_mode = 0
offset_left = 171.0
offset_top = 498.0
offset_right = 322.0
offset_bottom = 522.0
max_value = 20.0
step = 0.01
prefix = "Energy :"
snap_step = 0.01

[node name="Character" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="ValueSliderV2" parent="UI/Character" instance=ExtResource("6_lpx7j")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 259.0
offset_right = 0.0
offset_bottom = 311.0
grow_horizontal = 0
min_value = Vector2(-1000, -1000)
max_value = Vector2(1000, 1000)

[node name="Buttons" type="VBoxContainer" parent="UI/Character"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -374.0
offset_bottom = 240.0
grow_horizontal = 0

[node name="SkelButton" type="Button" parent="UI/Character/Buttons"]
layout_mode = 2
text = "skel - 비어있음"

[node name="AtlasButton" type="Button" parent="UI/Character/Buttons"]
layout_mode = 2
text = "altas - 비어있음"

[node name="NormalButton" type="Button" parent="UI/Character/Buttons"]
layout_mode = 2
text = "normal - 비어있음"

[node name="LoadButton" type="Button" parent="UI/Character/Buttons"]
layout_mode = 2
text = "LOAD!"

[node name="FileDialog" type="FileDialog" parent="UI/Character"]
unique_name_in_owner = true
size = Vector2i(303, 180)

[connection signal="item_selected" from="UI/Light/Tree" to="UI/Light/Tree" method="_on_item_selected"]
[connection signal="light_selected" from="UI/Light/Tree" to="Light2DTool" method="_on_tree_light_selected"]
[connection signal="light_selected" from="UI/Light/Tree" to="UI/Light" method="_on_tree_light_selected"]
[connection signal="value_changed" from="UI/Light/LightPosition" to="UI/Light" method="_on_light_position_value_changed"]
[connection signal="color_changed" from="UI/Light/LightColorPicker" to="UI/Light" method="_on_light_color_picker_color_changed"]
[connection signal="value_changed" from="UI/Light/ScaleSlider" to="UI/Light" method="_on_scale_slider_value_changed"]
[connection signal="value_changed" from="UI/Light/EnergySlider" to="UI/Light" method="_on_energy_slider_value_changed"]
[connection signal="value_changed" from="UI/Character/ValueSliderV2" to="Light2DTool" method="_on_value_slider_v_2_value_changed"]
[connection signal="pressed" from="UI/Character/Buttons/SkelButton" to="Light2DTool" method="_on_skel_button_pressed"]
[connection signal="pressed" from="UI/Character/Buttons/AtlasButton" to="Light2DTool" method="_on_atlas_button_pressed"]
[connection signal="pressed" from="UI/Character/Buttons/NormalButton" to="Light2DTool" method="_on_normal_button_pressed"]
[connection signal="pressed" from="UI/Character/Buttons/LoadButton" to="Light2DTool" method="_on_load_button_pressed"]
